--- a/plugin.html
+++ b/plugin.html
@@ -14,7 +14,7 @@
     button {
       margin: auto;
       display: block;
-      width: 100px;
+      width: 110px;
     }
     button {
       color: #fafafa;
@@ -38,6 +38,7 @@
       border-radius: 10px;
       margin: 5px auto;
       display: block;
+      border: 1px solid rgb(211, 211, 211);
     }
 
     #myBar {
