--- a/plugin.html
+++ b/plugin.html
@@ -9,7 +9,7 @@
 
   <style>
     body {
-      width: 300px;
+      width: 360px;
     }
     button {
       margin: auto;
@@ -85,6 +85,16 @@
       margin: 5px;
       margin-bottom: 15px;
     }
+    #mode-selector {
+      margin: 5px;
+      margin-bottom: 15px;
+    }
+    #append-selector {
+      margin: 5px;
+    }
+    #overwrite-selector {
+      margin: 5px;
+    }
   </style>
 
   <body>
@@ -109,6 +119,22 @@
         </div>
         <div class="form-child" id="option-child">
           <h2 class="div-labels">options</h2>
+          <div id="mode-selector">
+            <span id="append-selector">
+              <label for="append">Append</label>
+              <input type="radio" name="mode" id="append" value="append" />
+            </span>
+            <span id="overwrite-selector">
+              <input
+                type="radio"
+                name="mode"
+                id="overwrite"
+                value="overwrite"
+                checked="checked"
+              />
+              <label for="overwrite">Overwrite</label>
+            </span>
+          </div>
           <div id="notify-options">
             <div>
               <input
