--- a/plugin.html
+++ b/plugin.html
@@ -91,9 +91,11 @@
     }
     #append-selector {
       margin: 5px;
+      float: left;
     }
     #overwrite-selector {
       margin: 5px;
+      float: right;
     }
   </style>
 
